apps/prowlarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  selector:
    matchLabels:
      app: prowlarr
  replicas: 1
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:1.21.2
          ports:
            - containerPort: 9696
          volumeMounts:
            - name: prowlarr-data
              mountPath: /config
        - name: privoxy
          image: binhex/arch-privoxyvpn:3.0.34-2-05
          ports:
            - containerPort: 8118
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
            privileged: true # required for wireguard
          volumeMounts:
            - name: privoxy-data
              mountPath: /config
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - curl --fail --proxy http://localhost:8118 https://jsonip.com || exit 1
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 20
      volumes:
        - name: prowlarr-data
          persistentVolumeClaim:
            claimName: prowlarr-data
        - name: privoxy-data
          persistentVolumeClaim:
            claimName: privoxy-data
